<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">我的电影</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">设置</string>



    //排序设置String
    <string name="action_settings">设置</string>
    <string name="pref_mode_label">排序方式</string>

    <string name="pref_mode_label_popular">最受欢迎</string>

    <string name="pref_mode_label_toprated">评分最高</string>

    <string name="pref_mode_key">mode</string>

    <string name="pref_mode_popular">popular</string>

    <string name="pref_mode_toprated">toprated</string>

    <!-- Key name for storing mode status in SharedPreferences -->
    <string name="pref_movie_status_key" translatable="false">movie-status</string>

    //DetailActivity中的strings
    <string name="title_activity_detail">详情</string>
    <string name="hello_world">detail</string>

    <string name="action_refresh">刷新</string>
    <string name="action_showCollection">我的收藏列表</string>
    <string name="action_showCollection_showAllMovies">全部电影列表</string>

    <string name="movie_detail_overview_close">收起</string>
    <string name="movie_detail_overview_open">展开</string>

    <string name="action_collect"></string>
    <string name="action_collect_cancel">取消收藏</string>
    <string name="movie_detail_runtime_extraText">分钟</string>
    <string name="movie_detail_voteAverage_extraText">/10</string>
    <string name="movie_detail_videos_title_text">预告片</string>
    <string name="movie_detail_videos_itemtitle_text">预告片</string>
    <string name="movie_detail_videos_none_text">该电影暂无预告片</string>
    <string name="movie_detail_reviews_title_text">评论</string>
    <string name="movie_detail_reviews_itemtitle_text">评论</string>
    <string name="movie_detail_reviews_none_text">该电影暂无评论</string>

     <!--SyncAdapter related -->
    <string name="sync_account_type">PopularMovies.example.com</string>
    <string name="content_authority">app.com.example.android.popularmovies</string>

    <!-- Notification Format -->
    <string name="notification_changed">
        今日<xliff:g id="mode">%1$s</xliff:g>榜单第一名变更为：<xliff:g id="title">%2$s</xliff:g>
    </string>
    <string name="notification_no_changed">
        今日<xliff:g id="mode">%1$s</xliff:g>榜单第一名保持不变。
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification_popular">
            last_notification_popular
    </string>

    <string name="pref_last_notification_toprated">
            last_notification_toprated
    </string>

    <!-- Strings related to Notification Enabled preference -->
    <string
        name="pref_enable_notifications_key" translatable="false">enable_notifications
    </string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true"> Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_sync_interval_label">同步频率（小时）</string>
    <string name="pref_sync_interval_key">syncInterval</string>
    <string name="pref_sync_interval_default">24</string>
    <string name="empty_movie_list">列表为空</string>
</resources>
